--- a/src/renderer/src/assets/globals.css
+++ b/src/renderer/src/assets/globals.css
@@ -182,13 +182,22 @@
   * {
     @apply border-border outline-ring/50;
   }
+  html {
+    height: 100%;
+  }
   body {
     @apply bg-background text-foreground;
     margin: 0;
     padding: 0;
+    height: 100%;
     overflow: hidden;
     font-family: 'Circular Std', sans-serif;
     font-weight: 400;
+  }
+  #root {
+    height: 100%;
+    display: flex;
+    flex-direction: column;
   }
   code,
   pre,
